--- a/exampleConfigFile.yaml
+++ b/exampleConfigFile.yaml
@@ -12,6 +12,7 @@ devices:
 - id: 40
   type:  "garage"
   name:  "Ratgdo"
+  ratgdo: "True"
   # below are optional & only individually used if defined
   # each name refers to feature
   # type {1: state var, 2:state init, 3:integer var, 4:integer init}
