bonjour discovery for garage device Ratgdo

--- a/Pipfile
+++ b/Pipfile
@@ -7,8 +7,11 @@ name = "pypi"
 udi-interface = "*"
 markdown2 = "*"
 pyaml = "*"
+requests = "*"
 
 [dev-packages]
+pylsp-mypy = "*"
+pyls = "*"
 
 [requires]
 python_version = "3.11.9"
