--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,2 @@
--i https://pypi.org/simple
-certifi==2024.6.2; python_version >= '3.6'
-charset-normalizer==3.3.2; python_full_version >= '3.7.0'
-idna==3.7; python_version >= '3.5'
-markdown2==2.4.13; python_version >= '3.5' and python_version < '4'
-netifaces==0.11.0
-paho-mqtt==2.1.0; python_version >= '3.7'
-pyaml==24.4.0; python_version >= '3.8'
-pyisy==2.1.7
-python-dateutil==2.9.0.post0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
-python-dotenv==1.0.1; python_version >= '3.8'
-pyyaml==6.0.1; python_version >= '3.6'
-requests==2.32.3; python_version >= '3.8'
-six==1.16.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
-udi-interface==3.3.12; python_version >= '3.10'
-urllib3==2.2.2; python_version >= '3.8'
+udi_interface
+requests
