--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,5 +1,8 @@
 # See https://pre-commit.com for more information
 # See https://pre-commit.com/hooks.html for more hooks
+# To run tests before you push instead of before you commit (recommended if tests are slow),
+# uncomment stages line and run `pre-commit install --hook-type pre-push`
+# To run manually on all files `pre-commit run --all-files
 
 repos:
   # Standard hooks for file formatting
@@ -9,7 +12,15 @@ repos:
       - id: trailing-whitespace
       - id: end-of-file-fixer
       - id: check-yaml
+      - id: check-json
+      - id: check-xml
+      - id: check-toml
       - id: check-added-large-files
+      - id: check-merge-conflict
+      - id: check-case-conflict
+      - id: detect-private-key
+      - id: mixed-line-ending
+        args: ['--fix=lf']
 
 
   # Extremely fast Python linter and formatter
@@ -19,6 +30,13 @@ repos:
       - id: ruff
         args: [--fix] # Automatically fix what it can
       - id: ruff-format
+
+  # Shell script linting
+  - repo: https://github.com/shellcheck-py/shellcheck-py
+    rev: v0.10.0.1
+    hooks:
+      - id: shellcheck
+        exclude: '^\.envrc$'
 
   # Local hook to run your test suite
   - repo: local
