--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -22,6 +22,11 @@ repos:
       - id: mixed-line-ending
         args: ['--fix=lf']
 
+  # automatically upgrade python files
+  - repo: https://github.com/asottile/pyupgrade
+    rev: v3.21.2
+    hooks:
+      - id: pyupgrade
 
   # Extremely fast Python linter and formatter
   - repo: https://github.com/astral-sh/ruff-pre-commit
